# F.A.P.S

./: .env.example  .gitignore  README.md  __init__.py  __main__.py  cli.py  example-config.yaml  pyproject.toml  setup.py
config/: __init__.py  builder.py  loader.py  schema.py
engine/: __init__.py  collector.py  launcher.py  storage.py
helpers/: __init__.py  hashing.py  image.py  retry.py
renderers/: __init__.py  grid.py
renderers/templates/: grid.html.j2
